// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenSearch Serverless Vector Store No data access policies Should match snapshot 1`] = `
{
  "Conditions": {
    "testaossvectorIsDataAccessPolicyNotEmpty6E2A5F9A": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            "[]",
            "[]",
          ],
        },
      ],
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AOSSCRProviderCRRole52D2573C": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Ref": "testaossvectorAOSSApiAccessAll11BE2FF9",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "AOSSCRProviderCustomResourcesFunctionDE12A63E": {
      "DependsOn": [
        "AOSSCRProviderCRRole52D2573C",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "mockCode",
        },
        "Description": "Custom Resource Provider",
        "Handler": "custom_resources.on_event",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "AOSSCRProviderCRRole52D2573C",
            "Arn",
          ],
        },
        "Runtime": "python3.12",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AOSSCRProviderCustomResourcesFunctionLogRetention77F0ABDA": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "AOSSCRProviderCustomResourcesFunctionDE12A63E",
              },
            ],
          ],
        },
        "RetentionInDays": 7,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "AOSSCRProviderProviderRole736813AB": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy.",
            },
            {
              "applies_to": [
                {
                  "regex": "/^Resource::<AOSSCRProviderCustomResourcesFunction[A-Z0-9]+\\.Arn>:\\*$/g",
                },
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource Provider has a wildcard to invoke any version of the specific Custom Resource function.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "AOSSCRProviderProviderRoleDefaultPolicyED4F4ACE": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "applies_to": [
                {
                  "regex": "/^Resource::<AOSSCRProviderCustomResourcesFunction[A-Z0-9]+\\.Arn>:\\*$/g",
                },
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource Provider has a wildcard to invoke any version of the specific Custom Resource function.",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "AOSSCRProviderCustomResourcesFunctionDE12A63E",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "AOSSCRProviderCustomResourcesFunctionDE12A63E",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AOSSCRProviderProviderRoleDefaultPolicyED4F4ACE",
        "Roles": [
          {
            "Ref": "AOSSCRProviderProviderRole736813AB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AOSSCRProviderframeworkonEvent8EC7CF0A": {
      "DependsOn": [
        "AOSSCRProviderProviderRoleDefaultPolicyED4F4ACE",
        "AOSSCRProviderProviderRole736813AB",
      ],
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-L1",
              "reason": "Lambda runtime version is managed upstream by CDK.",
            },
          ],
        },
      },
      "Properties": {
        "Code": {
          "ZipFile": "mockCode",
        },
        "Description": "AWS CDK resource provider framework - onEvent (test-stack/AOSSCRProvider/Provider)",
        "Environment": {
          "Variables": {
            "USER_ON_EVENT_FUNCTION_ARN": {
              "Fn::GetAtt": [
                "AOSSCRProviderCustomResourcesFunctionDE12A63E",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "Role": {
          "Fn::GetAtt": [
            "AOSSCRProviderProviderRole736813AB",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AOSSCRProviderframeworkonEventLogRetention38AE751E": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "AOSSCRProviderframeworkonEvent8EC7CF0A",
              },
            ],
          ],
        },
        "RetentionInDays": 7,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "4e26bf2d0a26f2097fb2b261f22bb51e3f6b4b52635777b1e54edbd8e2d58c35.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource LogRetention Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy. Managed by CDK.",
            },
            {
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource LogRetention Lambda uses a wildcard to manage log streams created at runtime. Managed by CDK.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource LogRetention Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy. Managed by CDK.",
            },
            {
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource LogRetention Lambda uses a wildcard to manage log streams created at runtime. Managed by CDK.",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testaossvectorAOSSApiAccessAll11BE2FF9": {
      "Properties": {
        "Description": "",
        "Path": "/",
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "aoss:APIAccessAll",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "testaossvectorVectorCollectionDAB275BC",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::ManagedPolicy",
    },
    "testaossvectorDataAccessPolicyC2F37B1E": {
      "Condition": "testaossvectorIsDataAccessPolicyNotEmpty6E2A5F9A",
      "Properties": {
        "Name": "dataaccesspolicy-6e7dd174",
        "Policy": "[]",
        "Type": "data",
      },
      "Type": "AWS::OpenSearchServerless::AccessPolicy",
    },
    "testaossvectorEncryptionPolicyB6AD3F65": {
      "Properties": {
        "Name": "encryptionpolicy-6e7dd174",
        "Policy": "{"Rules":[{"ResourceType":"collection","Resource":["collection/vectorstore-6e7dd174"]}],"AWSOwnedKey":true}",
        "Type": "encryption",
      },
      "Type": "AWS::OpenSearchServerless::SecurityPolicy",
    },
    "testaossvectorManageIndexPolicy92B4BD85": {
      "Properties": {
        "Name": "manageindexpolicy-6e7dd174",
        "Policy": {
          "Fn::Join": [
            "",
            [
              "[{"Rules":[{"Resource":["index/vectorstore-6e7dd174/*"],"Permission":["aoss:DescribeIndex","aoss:CreateIndex","aoss:DeleteIndex","aoss:UpdateIndex"],"ResourceType":"index"},{"Resource":["collection/vectorstore-6e7dd174"],"Permission":["aoss:DescribeCollectionItems"],"ResourceType":"collection"}],"Principal":["",
              {
                "Fn::GetAtt": [
                  "AOSSCRProviderCRRole52D2573C",
                  "Arn",
                ],
              },
              ""],"Description":""}]",
            ],
          ],
        },
        "Type": "data",
      },
      "Type": "AWS::OpenSearchServerless::AccessPolicy",
    },
    "testaossvectorNetworkPolicy759873B7": {
      "Properties": {
        "Name": "networkpolicy-6e7dd174",
        "Policy": "[{"Rules":[{"ResourceType":"collection","Resource":["collection/vectorstore-6e7dd174"]},{"ResourceType":"dashboard","Resource":["collection/vectorstore-6e7dd174"]}],"AllowFromPublic":true}]",
        "Type": "network",
      },
      "Type": "AWS::OpenSearchServerless::SecurityPolicy",
    },
    "testaossvectorVectorCollectionDAB275BC": {
      "DependsOn": [
        "testaossvectorEncryptionPolicyB6AD3F65",
        "testaossvectorNetworkPolicy759873B7",
      ],
      "Properties": {
        "Name": "vectorstore-6e7dd174",
        "Type": "VECTORSEARCH",
      },
      "Type": "AWS::OpenSearchServerless::Collection",
    },
    "testaossvectorindexVectorIndexA6045B49": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "testaossvectorManageIndexPolicy92B4BD85",
        "testaossvectorVectorCollectionDAB275BC",
      ],
      "Properties": {
        "Dimensions": 1536,
        "Endpoint": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "testaossvectorVectorCollectionDAB275BC",
                  "Id",
                ],
              },
              ".us-east-1.aoss.amazonaws.com",
            ],
          ],
        },
        "IndexName": "test-index",
        "MetadataManagement": [
          {
            "DataType": "text",
            "Filterable": true,
            "MappingField": "AMAZON_BEDROCK_TEXT_CHUNK",
          },
        ],
        "ServiceToken": {
          "Fn::GetAtt": [
            "AOSSCRProviderframeworkonEvent8EC7CF0A",
            "Arn",
          ],
        },
        "VectorField": "vector",
      },
      "Type": "Custom::OpenSearchIndex",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`OpenSearch Serverless Vector Store With data access policies Should match snapshot 1`] = `
{
  "Conditions": {
    "testaossvectorIsDataAccessPolicyNotEmpty6E2A5F9A": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            "[]",
            {
              "Fn::Join": [
                "",
                [
                  "[{"Rules":[{"Resource":["collection/vectorstore-6e7dd174"],"Permission":["aoss:DescribeCollectionItems","aoss:CreateCollectionItems","aoss:UpdateCollectionItems"],"ResourceType":"collection"},{"Resource":["index/vectorstore-6e7dd174/*"],"Permission":["aoss:UpdateIndex","aoss:DescribeIndex","aoss:ReadDocument","aoss:WriteDocument","aoss:CreateIndex"],"ResourceType":"index"}],"Principal":["",
                  {
                    "Fn::GetAtt": [
                      "TestRole6C9272DF",
                      "Arn",
                    ],
                  },
                  ""],"Description":""}]",
                ],
              ],
            },
          ],
        },
      ],
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AOSSCRProviderCRRole52D2573C": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Ref": "testaossvectorAOSSApiAccessAll11BE2FF9",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "AOSSCRProviderCustomResourcesFunctionDE12A63E": {
      "DependsOn": [
        "AOSSCRProviderCRRole52D2573C",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "mockCode",
        },
        "Description": "Custom Resource Provider",
        "Handler": "custom_resources.on_event",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "AOSSCRProviderCRRole52D2573C",
            "Arn",
          ],
        },
        "Runtime": "python3.12",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AOSSCRProviderCustomResourcesFunctionLogRetention77F0ABDA": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "AOSSCRProviderCustomResourcesFunctionDE12A63E",
              },
            ],
          ],
        },
        "RetentionInDays": 7,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "AOSSCRProviderProviderRole736813AB": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy.",
            },
            {
              "applies_to": [
                {
                  "regex": "/^Resource::<AOSSCRProviderCustomResourcesFunction[A-Z0-9]+\\.Arn>:\\*$/g",
                },
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource Provider has a wildcard to invoke any version of the specific Custom Resource function.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "AOSSCRProviderProviderRoleDefaultPolicyED4F4ACE": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "applies_to": [
                {
                  "regex": "/^Resource::<AOSSCRProviderCustomResourcesFunction[A-Z0-9]+\\.Arn>:\\*$/g",
                },
              ],
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource Provider has a wildcard to invoke any version of the specific Custom Resource function.",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "AOSSCRProviderCustomResourcesFunctionDE12A63E",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "AOSSCRProviderCustomResourcesFunctionDE12A63E",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AOSSCRProviderProviderRoleDefaultPolicyED4F4ACE",
        "Roles": [
          {
            "Ref": "AOSSCRProviderProviderRole736813AB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AOSSCRProviderframeworkonEvent8EC7CF0A": {
      "DependsOn": [
        "AOSSCRProviderProviderRoleDefaultPolicyED4F4ACE",
        "AOSSCRProviderProviderRole736813AB",
      ],
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-L1",
              "reason": "Lambda runtime version is managed upstream by CDK.",
            },
          ],
        },
      },
      "Properties": {
        "Code": {
          "ZipFile": "mockCode",
        },
        "Description": "AWS CDK resource provider framework - onEvent (test-stack/AOSSCRProvider/Provider)",
        "Environment": {
          "Variables": {
            "USER_ON_EVENT_FUNCTION_ARN": {
              "Fn::GetAtt": [
                "AOSSCRProviderCustomResourcesFunctionDE12A63E",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "Role": {
          "Fn::GetAtt": [
            "AOSSCRProviderProviderRole736813AB",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AOSSCRProviderframeworkonEventLogRetention38AE751E": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "AOSSCRProviderframeworkonEvent8EC7CF0A",
              },
            ],
          ],
        },
        "RetentionInDays": 7,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "4e26bf2d0a26f2097fb2b261f22bb51e3f6b4b52635777b1e54edbd8e2d58c35.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource LogRetention Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy. Managed by CDK.",
            },
            {
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource LogRetention Lambda uses a wildcard to manage log streams created at runtime. Managed by CDK.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM4",
              "reason": "CDK CustomResource LogRetention Lambda uses the AWSLambdaBasicExecutionRole AWS Managed Policy. Managed by CDK.",
            },
            {
              "id": "AwsSolutions-IAM5",
              "reason": "CDK CustomResource LogRetention Lambda uses a wildcard to manage log streams created at runtime. Managed by CDK.",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestRole6C9272DF": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Ref": "testaossvectorAOSSApiAccessAll11BE2FF9",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testaossvectorAOSSApiAccessAll11BE2FF9": {
      "Properties": {
        "Description": "",
        "Path": "/",
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "aoss:APIAccessAll",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "testaossvectorVectorCollectionDAB275BC",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::ManagedPolicy",
    },
    "testaossvectorDataAccessPolicyC2F37B1E": {
      "Condition": "testaossvectorIsDataAccessPolicyNotEmpty6E2A5F9A",
      "Properties": {
        "Name": "dataaccesspolicy-6e7dd174",
        "Policy": {
          "Fn::Join": [
            "",
            [
              "[{"Rules":[{"Resource":["collection/vectorstore-6e7dd174"],"Permission":["aoss:DescribeCollectionItems","aoss:CreateCollectionItems","aoss:UpdateCollectionItems"],"ResourceType":"collection"},{"Resource":["index/vectorstore-6e7dd174/*"],"Permission":["aoss:UpdateIndex","aoss:DescribeIndex","aoss:ReadDocument","aoss:WriteDocument","aoss:CreateIndex"],"ResourceType":"index"}],"Principal":["",
              {
                "Fn::GetAtt": [
                  "TestRole6C9272DF",
                  "Arn",
                ],
              },
              ""],"Description":""}]",
            ],
          ],
        },
        "Type": "data",
      },
      "Type": "AWS::OpenSearchServerless::AccessPolicy",
    },
    "testaossvectorEncryptionPolicyB6AD3F65": {
      "Properties": {
        "Name": "encryptionpolicy-6e7dd174",
        "Policy": "{"Rules":[{"ResourceType":"collection","Resource":["collection/vectorstore-6e7dd174"]}],"AWSOwnedKey":true}",
        "Type": "encryption",
      },
      "Type": "AWS::OpenSearchServerless::SecurityPolicy",
    },
    "testaossvectorManageIndexPolicy92B4BD85": {
      "Properties": {
        "Name": "manageindexpolicy-6e7dd174",
        "Policy": {
          "Fn::Join": [
            "",
            [
              "[{"Rules":[{"Resource":["index/vectorstore-6e7dd174/*"],"Permission":["aoss:DescribeIndex","aoss:CreateIndex","aoss:DeleteIndex","aoss:UpdateIndex"],"ResourceType":"index"},{"Resource":["collection/vectorstore-6e7dd174"],"Permission":["aoss:DescribeCollectionItems"],"ResourceType":"collection"}],"Principal":["",
              {
                "Fn::GetAtt": [
                  "AOSSCRProviderCRRole52D2573C",
                  "Arn",
                ],
              },
              ""],"Description":""}]",
            ],
          ],
        },
        "Type": "data",
      },
      "Type": "AWS::OpenSearchServerless::AccessPolicy",
    },
    "testaossvectorNetworkPolicy759873B7": {
      "Properties": {
        "Name": "networkpolicy-6e7dd174",
        "Policy": "[{"Rules":[{"ResourceType":"collection","Resource":["collection/vectorstore-6e7dd174"]},{"ResourceType":"dashboard","Resource":["collection/vectorstore-6e7dd174"]}],"AllowFromPublic":true}]",
        "Type": "network",
      },
      "Type": "AWS::OpenSearchServerless::SecurityPolicy",
    },
    "testaossvectorVectorCollectionDAB275BC": {
      "DependsOn": [
        "testaossvectorEncryptionPolicyB6AD3F65",
        "testaossvectorNetworkPolicy759873B7",
      ],
      "Properties": {
        "Name": "vectorstore-6e7dd174",
        "Type": "VECTORSEARCH",
      },
      "Type": "AWS::OpenSearchServerless::Collection",
    },
    "testaossvectorindexVectorIndexA6045B49": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "testaossvectorDataAccessPolicyC2F37B1E",
        "testaossvectorManageIndexPolicy92B4BD85",
        "testaossvectorVectorCollectionDAB275BC",
      ],
      "Properties": {
        "Dimensions": 1536,
        "Endpoint": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "testaossvectorVectorCollectionDAB275BC",
                  "Id",
                ],
              },
              ".us-east-1.aoss.amazonaws.com",
            ],
          ],
        },
        "IndexName": "test-index",
        "MetadataManagement": [
          {
            "DataType": "text",
            "Filterable": true,
            "MappingField": "AMAZON_BEDROCK_TEXT_CHUNK",
          },
        ],
        "ServiceToken": {
          "Fn::GetAtt": [
            "AOSSCRProviderframeworkonEvent8EC7CF0A",
            "Arn",
          ],
        },
        "VectorField": "vector",
      },
      "Type": "Custom::OpenSearchIndex",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
